<resources>
    <string name="app_name">rssr</string>

    <string name="search">Search</string>
    <string name="re_search">Re-Search</string>
    <string name="add">Add</string>

    <string name="new_subscription">New Subscription</string>
    <string name="new_subscription_url_hint">e.g. : http://example.com/</string>
    <string name="failed_to_search">Failed to search</string>
    <string name="duplicated_feed">Same feed was already subscribed</string>
    <string name="subscribe">Subscribed!</string>

    <string name="tab_all">ALL</string>
    <string name="tab_bookmark">BOOKMARK</string>
    <string name="tab_unread">UNREAD</string>
</resources>
